// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Podcast Basic 1`] = `
<div
  className="commonpodcast-basic-muipaper-root-1 commonpodcast-basic-makestyles-root-1 commonpodcast-basic-muipaper-elevation1-1 commonpodcast-basic-muipaper-rounded-1"
>
  <img
    alt="Qui Sapiente Atque podcast cover"
    className="commonpodcast-basic-makestyles-photo-1"
    src="http://placeimg.com/256/256/games"
  />
  <div
    className="commonpodcast-basic-makestyles-info-1"
  >
    <p
      className="commonpodcast-basic-muitypography-root-1 commonpodcast-basic-makestyles-title-1 commonpodcast-basic-makestyles-oneline-1 commonpodcast-basic-muitypography-body1-1"
    >
      #XX - Aliqua nisi culpa eiusmod quis veniam consequat esse
    </p>
    <p
      className="commonpodcast-basic-muitypography-root-1 commonpodcast-basic-makestyles-series-1 commonpodcast-basic-makestyles-oneline-1 commonpodcast-basic-muitypography-body1-1"
    >
      Qui Sapiente Atque
    </p>
    <p
      className="commonpodcast-basic-muitypography-root-1 commonpodcast-basic-makestyles-description-1 commonpodcast-basic-muitypography-body2-1"
    >
      Optio consectetur ad reprehenderit nostrum est. Quasi tenetur omnis porro quisquam nihil sequi eaque eum officiis. Aut maxime et occaecati voluptatem in voluptatum. Rerum et sed dignissimos quasi vel blanditiis consequatur magni eaque.
    </p>
  </div>
</div>
`;

exports[`Storyshots Common/Podcast With Link 1`] = `
<div
  className="commonpodcast-with-link-muipaper-root-1 commonpodcast-with-link-makestyles-root-1 commonpodcast-with-link-muipaper-elevation1-1 commonpodcast-with-link-muipaper-rounded-1"
>
  <a
    className="commonpodcast-with-link-muitypography-root-1 commonpodcast-with-link-muilink-root-1 commonpodcast-with-link-muilink-underlinehover-1 commonpodcast-with-link-makestyles-link-1 commonpodcast-with-link-muitypography-colorprimary-1"
    href="https://www.google.com"
    onBlur={[Function]}
    onFocus={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Qui Sapiente Atque podcast cover"
      className="commonpodcast-with-link-makestyles-photo-1"
      src="http://placeimg.com/256/256/games"
    />
  </a>
  <div
    className="commonpodcast-with-link-makestyles-info-1"
  >
    <p
      className="commonpodcast-with-link-muitypography-root-1 commonpodcast-with-link-makestyles-title-1 commonpodcast-with-link-makestyles-oneline-1 commonpodcast-with-link-muitypography-body1-1"
    >
      <a
        className="commonpodcast-with-link-muitypography-root-1 commonpodcast-with-link-muilink-root-1 commonpodcast-with-link-muilink-underlinehover-1 commonpodcast-with-link-muitypography-colorprimary-1"
        href="https://www.google.com"
        onBlur={[Function]}
        onFocus={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        #XX - Aliqua nisi culpa eiusmod quis veniam consequat esse
      </a>
    </p>
    <p
      className="commonpodcast-with-link-muitypography-root-1 commonpodcast-with-link-makestyles-series-1 commonpodcast-with-link-makestyles-oneline-1 commonpodcast-with-link-muitypography-body1-1"
    >
      Qui Sapiente Atque
    </p>
    <p
      className="commonpodcast-with-link-muitypography-root-1 commonpodcast-with-link-makestyles-description-1 commonpodcast-with-link-muitypography-body2-1"
    >
      Optio consectetur ad reprehenderit nostrum est. Quasi tenetur omnis porro quisquam nihil sequi eaque eum officiis. Aut maxime et occaecati voluptatem in voluptatum. Rerum et sed dignissimos quasi vel blanditiis consequatur magni eaque.
    </p>
  </div>
</div>
`;
